--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\log4net.RabbitMQ\packages.config" />
-  <repository path="..\..\log4net.RabbitMQ.Tests\packages.config" />
   <repository path="..\log4net.RabbitMQ.Tests\packages.config" />
-  <repository path="..\log4net.RabbitMQAppender.Listener\packages.config" />
-  <repository path="..\samples\log4net.RabbitMQAppender.Listener\packages.config" />
   <repository path="..\samples\log4net.RabbitMQ.SampleWeb\packages.config" />
+  <repository path="..\samples\log4net.RabbitMQ.Listener\packages.config" />
 </repositories>
