--- a/src/log4net.RabbitMQ.Tests/packages.config
+++ b/src/log4net.RabbitMQ.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="1.2.10" />
-  <package id="NUnit" version="2.5.9.10348" />
-  <package id="RabbitMQ.Client" version="2.6.1" />
+  <package id="log4net" version="2.0.2" targetFramework="net40" />
+  <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="RabbitMQ.Client" version="3.2.1" targetFramework="net40" />
   <package id="SharpTestsEx" version="1.1.1" />
 </packages>
