--- a/src/log4net.RabbitMQ/packages.config
+++ b/src/log4net.RabbitMQ/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="1.2.10" />
-  <package id="RabbitMQ.Client" version="2.6.1" />
+  <package id="log4net" version="2.0.2" targetFramework="net35" />
+  <package id="RabbitMQ.Client" version="3.2.1" targetFramework="net35" />
 </packages>
