Added additional support for configuring the  exchange and message properties.
Added ExchangeProperties which adds support for configuring the exchange
type and durability and to allow support for adding exchange bindings.

Added MessageProperties which allows the Topic to be customized with a
LayoutPattern and allows the ContentType, persistence and priority of
messages to be adjusted.

--- a/src/log4net.RabbitMQ/log4net.RabbitMQ.csproj
+++ b/src/log4net.RabbitMQ/log4net.RabbitMQ.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExchangeBinding.cs" />
+    <Compile Include="ExchangeProperties.cs" />
+    <Compile Include="MessageProperties.cs" />
     <Compile Include="RabbitMQAppender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
