--- a/src/log4net.RabbitMQ.1.2.10/packages.config
+++ b/src/log4net.RabbitMQ.1.2.10/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="1.2.10" targetFramework="net35" allowedVersions="[1.2.10]" />
-  <package id="RabbitMQ.Client" version="3.4.0" targetFramework="net35" />
+  <package id="log4net" version="2.0.3" targetFramework="net35" allowedVersions="[1.2.10]" requireReinstallation="True" />
+  <package id="RabbitMQ.Client" version="3.5.1" targetFramework="net451" />
 </packages>
