--- a/src/samples/log4net.RabbitMQ.SampleWeb/log4net.RabbitMQ.SampleWeb.csproj
+++ b/src/samples/log4net.RabbitMQ.SampleWeb/log4net.RabbitMQ.SampleWeb.csproj
@@ -158,12 +158,8 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Home\Index.cshtml">
-      <Generator>MvcRazorClassGenerator</Generator>
-    </Content>
-    <Content Include="Views\Home\DoThings.cshtml">
-      <Generator>MvcRazorClassGenerator</Generator>
-    </Content>
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\DoThings.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
